--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,8 @@ tmp/
 temp/.env
 packages/frontend/.env
 packages/backend/.env
+
+# Claude specific files and folders
+PROJECT_REQUIREMENTS.md
+CLAUDE.md
+.claude/
