--- a/fly.toml
+++ b/fly.toml
@@ -1,41 +1,20 @@
 app = "vencura"
 primary_region = "ord"
-kill_signal = "SIGINT"
-kill_timeout = "5s"
 
 [build]
   dockerfile = "Dockerfile"
+  [build.args]
+    VITE_DYNAMIC_ENVIRONMENT_ID = "bf348ffc-a3b0-4840-84ea-8d2635da1a88"
 
-[env]
-  NODE_ENV = "production"
-  PORT = "8080"
-
-[[services]]
-  protocol = "tcp"
+[http_service]
   internal_port = 8080
-  auto_stop_machines = true
+  force_https = true
+  auto_stop_machines = "stop"
   auto_start_machines = true
-  min_machines_running = 1
+  min_machines_running = 0
+  processes = ["app"]
 
-  [[services.ports]]
-    port = 80
-    handlers = ["http"]
-
-  [[services.ports]]
-    port = 443
-    handlers = ["tls", "http"]
-
-  [services.concurrency]
-    type = "connections"
-    hard_limit = 25
-    soft_limit = 20
-
-  [[services.http_checks]]
-    interval = "15s"
-    timeout = "2s"
-    grace_period = "5s"
-    method = "GET"
-    path = "/api/health"
-
-[deploy]
-  strategy = "rolling"
+[[vm]]
+  memory = "1gb"
+  cpu_kind = "shared"
+  cpus = 1
