--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -12,11 +12,19 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "lint": "eslint . --ext .ts",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "migration:generate": "typeorm-ts-node-commonjs migration:generate -d src/config/ormconfig.ts",
+    "migration:run": "typeorm-ts-node-commonjs migration:run -d src/config/ormconfig.ts",
+    "migration:revert": "typeorm-ts-node-commonjs migration:revert -d src/config/ormconfig.ts",
+    "migration:show": "typeorm-ts-node-commonjs migration:show -d src/config/ormconfig.ts"
   },
   "dependencies": {
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
+    "@types/uuid": "^10.0.0",
     "@vencura/shared": "^1.0.0",
     "bcrypt": "^5.1.1",
+    "better-sqlite3": "^9.3.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "ethers": "^6.10.0",
@@ -24,8 +32,15 @@
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "jwks-rsa": "^3.2.0",
     "pg": "^8.11.3",
+    "pino": "^7.11.0",
+    "pino-pretty": "^13.1.1",
+    "socket.io": "^4.8.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.19",
+    "uuid": "^8.3.2",
     "winston": "^3.11.0",
     "zod": "^3.22.4"
   },
@@ -34,7 +49,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
-    "@types/jsonwebtoken": "^9.0.5",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.11.0",
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
