--- a/packages/backend/tsconfig.json
+++ b/packages/backend/tsconfig.json
@@ -8,10 +8,15 @@
     "lib": ["ES2022"],
     "types": ["node", "jest"],
     "emitDecoratorMetadata": true,
-    "experimentalDecorators": true
+    "experimentalDecorators": true,
+    "skipLibCheck": true,
+    "exactOptionalPropertyTypes": false
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.spec.ts"],
+  "ts-node": {
+    "files": true
+  },
   "references": [
     { "path": "../shared" }
   ]
